<resources>
    <string name="app_name" translatable="false">Y</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Repeat_password">Repeat password</string>
    <string name="Email" translatable="false">Email</string>
    <string name="LogIn">Log In</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="Register_text">Don\'t have an account? Register</string>
    <string name="Register">Register</string>
    <string name="Post">Post</string>
    <string name="New_post_text">What are you thinking about?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>

</resources>